[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "dogwalk"
version = "0.1.0"
description = "Eyes-free ACP coding-session manager"
requires-python = ">=3.11"
dependencies = ["agent-client-protocol==0.11.0"]

[project.scripts]
dogwalk = "webrtc_spike:main"

[tool.hatch.build.targets.wheel]
only-include = ["webrtc_spike.py", "webrtc_spike.html"]
